--- a/Eclipse Project/HappyLook/res/values/strings.xml
+++ b/Eclipse Project/HappyLook/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">Happy Look Wallpapers</string>
+    <string name="service_name">Happy Look Service</string>
+    
 
 </resources>
